--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf8">
     <title>Le Taquin</title>
-    <meta name="author" content="Félix Fonteneau & Saveria Frati--Peraldi">
+    <meta name="author" content="Félix Fonteneau et Saveria Frati--Peraldi">
     <link rel="stylesheet" type="text/css" href="index.css">
     <script language="javascript" src="xxx.js"></script>
 </head>  
