--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf8">
     <title>Le Taquin</title>
     <meta name="author" content="Félix Fonteneau et Saveria Frati--Peraldi">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="taquin.css">
     <script language="javascript" src="xxx.js"></script>
-</head>  
+</head>
 
 <body>
     <h1>Le Taquin</h1>
@@ -20,17 +20,17 @@
 	Lorsque le taquin est résolu, un message au bas de la page vous indique le nombre de déplacements utilisés pour la résolution.
 	</p>
 
-	<p>Veuillez choisir la taille de la grille: 2x2, 2x3, 3x2 ou 3x3.
+<div id='choix'>
+	<p>Veuillez choisir la taille de la grille: 2x2, 2x3, 3x2 ou 3x3. </p>
 
-		<a class="bouton1" href="exo4.html">Autre test</a>
-		<a class="bouton2" href="exo4.html">Autre test</a>
-		<a class="bouton3" href="exo4.html">Autre test</a>
-		<a class="bouton4" href="exo4.html">Autre test</a>
-
-	<div id="message" style="visibility: hidden">
-    Félicitations, vous avez résolu le taquin à l'aide de <span id="deplacements"></span> déplacements.
-	</div>
-	</p>
+  <form action="/action_page.php">
+    <input type="radio" name="jeu" value="2x2" checked="unchecked"> 2x2 <br/>
+    <input type="radio" name="jeu" value="2x3" checked="unchecked"> 2x3 <br/>
+    <input type="radio" name="jeu" value="3x2" checked="unchecked"> 3x2 <br/>
+    <input type="radio" name="jeu" value="3x3" checked="checked"> 3x3   <br/>
+    <input type="submit" value="JOUER">
+  </form>
+</div>
 </body>
 
 </html>
