--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <div id='choix'>
 	<p>Veuillez choisir la taille de la grille: 2x2, 2x3, 3x2 ou 3x3. </p>
 
-  <form action="/action_page.php">
-    <input type="radio" name="jeu" value="2x2" checked="unchecked"> 2x2 <br/>
+  <form action="taquin.php" method="get">
+    <input type="radio" name="jeu" value="2x2" checked="checked"> 2x2 <br/>
     <input type="radio" name="jeu" value="2x3" checked="unchecked"> 2x3 <br/>
     <input type="radio" name="jeu" value="3x2" checked="unchecked"> 3x2 <br/>
-    <input type="radio" name="jeu" value="3x3" checked="checked"> 3x3   <br/>
+    <input type="radio" name="jeu" value="3x3" checked="unchecked"> 3x3   <br/>
     <input type="submit" value="JOUER">
   </form>
 </div>
