--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 	</p>
 
 <div id='choix'>
-	<p>Veuillez choisir la taille de la grille: 2x2, 2x3, 3x2 ou 3x3. </p>
-    <a href=\"taquin.php?jeu=2x2\"><img src="2x2.png"/></a>;
-    <a href=\"taquin.php?jeu=3x2\"><img src="3x2.png"/></a>;
-    <a href=\"taquin.php?jeu=2x3\"><img src="2x3.png"/></a>;
-    <a href=\"taquin.php?jeu=3x3\"><img src="3x3.png"/></a>;
+	<p>Veuillez choisir la taille de la grille: 2x2, 2x3, 3x2 ou 3x3 en cliquant sur l'image correspondante. </p>
+    <a href=taquin.php?jeu=2x2><img src="2x2.png"/></a>        
+    <a href=taquin.php?jeu=3x2><img src="3x2.png"/></a>    
+    <a href=taquin.php?jeu=2x3><img src="2x3.png"/></a>    
+    <a href=taquin.php?jeu=3x3><img src="3x3.png"/></a>
 
 
 </div>
