--- a/index.html
+++ b/index.html
@@ -12,23 +12,31 @@
 <body>
     <h1> Le Taquin </h1>
     <br>
+
     <h2> Dans le cadre du projet de fin d'année d'Applications du Web, Félix Fonteneau et Saveria Frati--Peraldi vous présentent leur version du TAQUIN.
     </h2>
+
+
+    <p>Veuillez choisir la taille de la grille: 2x2, 2x3, 3x2 ou 3x3 en cliquant sur l'image correspondante. </p>
+
+    <div id='choix'>
+        <a href=taquin.php?jeu=2x2><img src="images/2x2.png"/></a>
+        <a href=taquin.php?jeu=3x2><img src="images/3x2.png"/></a>
+        <a href=taquin.php?jeu=2x3><img src="images/2x3.png"/></a>
+        <a href=taquin.php?jeu=3x3><img src="images/3x3.png"/></a>
+    </div>
+
+
+
 
 	<p>Vous devez remettre tous les carreaux dans l'ordre (de haut en bas et de gauche à droite) avec la case vide en bas à droite, simplement en échangeant des carreaux avec le trou. On peut faire glisser un seul carreau à la fois et seuls les carreaux contigus au trou peuvent glisser. Certaines configurations initiales n'ont pas de solution.
 
 	Lorsque le taquin est résolu, un message au bas de la page vous indique le nombre de déplacements utilisés pour la résolution.
 	</p>
 
-	<p>Veuillez choisir la taille de la grille: 2x2, 2x3, 3x2 ou 3x3 en cliquant sur l'image correspondante. </p>
 
-    <div id='choix'>
-        <a href=taquin.php?jeu=2x2><img src="2x2.png"/></a>
-        <a href=taquin.php?jeu=3x2><img src="3x2.png"/></a>
-        <a href=taquin.php?jeu=2x3><img src="2x3.png"/></a>
-        <a href=taquin.php?jeu=3x3><img src="3x3.png"/></a>
-    </div>
-    
+
+
 </body>
 
 </html>
