--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Le Taquin</title>
     <meta name="author" content="Félix Fonteneau et Saveria Frati--Peraldi">
     <link rel="stylesheet" type="text/css" href="taquin.css">
-    <script language="javascript" src="xxx.js"></script>
+  <!--   <script language="javascript" src="xxx.js"></script> -->
 </head>
 
 <body>
