--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Le Taquin</title>
     <meta name="author" content="Félix Fonteneau et Saveria Frati--Peraldi">
     <link rel="stylesheet" type="text/css" href="taquin.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" media="(max-width: 1100px)" href="index_mobile.css" />
+
   <!--   <script language="javascript" src="xxx.js"></script> -->
 </head>
 
@@ -29,9 +32,8 @@
 
 
 
-	<p>Vous devez remettre tous les carreaux dans l'ordre (de haut en bas et de gauche à droite) avec la case vide en bas à droite, simplement en échangeant des carreaux avec le trou. On peut faire glisser un seul carreau à la fois et seuls les carreaux contigus au trou peuvent glisser. Certaines configurations initiales n'ont pas de solution.
-
-	Lorsque le taquin est résolu, un message au bas de la page vous indique le nombre de déplacements utilisés pour la résolution.
+	<p>Vous devez remettre tous les carreaux dans l'ordre (de haut en bas et de gauche à droite) avec la case vide en bas à droite, simplement en échangeant des carreaux avec le trou. On peut faire glisser un ou plusieurs carreaux à la fois et seuls les carreaux contigus au trou peuvent glisser.
+    Lorsque le taquin est résolu, un message au bas de la page vous indique le nombre de déplacements utilisés pour la résolution.
 	</p>
 
 
