--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 
-	<p>Vous devez remettre tous les carreaux dans l'ordre (de haut en bas et de gauche à droite) avec la case vide en bas à droite, simplement en échangeant des carreaux avec le trou. On peut faire glisser un ou plusieurs carreaux à la fois et seuls les carreaux contigus au trou peuvent glisser.
+	<p>Vous devez remettre tous les carreaux dans l'ordre (de haut en bas et de gauche à droite) en laissant la case vide en bas à droite, simplement en échangeant des carreaux avec le trou. On peut faire glisser un ou plusieurs carreaux à la fois et seuls les carreaux contigus au trou peuvent glisser.
     Lorsque le taquin est résolu, un message au bas de la page vous indique le nombre de déplacements utilisés pour la résolution.
 	</p>
 
